sfdx-source/force-app/main/default/objects/Contract_Brand_Association__c/Contract_Brand_Association__c.object-meta.xml
<CustomObject>
    <description>LEM-3618: Initial Setup of Brand to Contract Relationship object</description>
    <label>Contract Brand Association</label>
    <nameField>
        <displayFormat>CBA-{0}</displayFormat>
        <label>Contract Brand Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Brand Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>