sfdx-source/force-app/main/default/objects/Contract_Brand_Association__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>LEM-3618: Initial Setup of Brand to Contract Relationship object</description>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Contract Brand Associations</relationshipLabel>
    <relationshipName>Contract_Brand_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>