sfdx-source/force-app/main/default/objects/Contract_Brand_Association__c/fields/Brand_Id__c.field-meta.xml
<CustomField>
    <fullName>Brand_Id__c</fullName>
    <description>LEM-5399: It is used to store the Brand Id of the brand related to the association.</description>
    <formula>CASESAFEID(Brand__r.Id)</formula>
    <label>Brand Id</label>
    <type>Text</type>
</CustomField>