sfdx-source/force-app/main/default/objects/Contract_Brand_Association__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <description>LEM-4875: Name of the brand associated with the contract.</description>
    <formula>Brand__r.Name</formula>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>