sfdx-source/force-app/main/default/objects/Contract_Brand_Association__c/fields/CBA_Migration_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CBA_Migration_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Reference LEM-3921</description>
    <externalId>true</externalId>
    <label>CBA Migration External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>