sfdx-source/force-app/main/default/objects/Contract_Brand_Association__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>LEM-3618: Initial Setup of Brand to Contract Relationship object</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Brand Associations</relationshipLabel>
    <relationshipName>Contract_Brand_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>