sfdx-source/force-app/main/default/objects/Contract_Brand_Association__c/fields/Migrated_Record__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reference LEM-3921</description>
    <label>Migrated Record?</label>
    <type>Checkbox</type>
</CustomField>