sfdx-source/force-app/main/default/objects/Contract_Brand_Association__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-3618: Initial Setup of Brand to Contract Relationship object</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contract Brand Associations</relationshipLabel>
    <relationshipName>Contract_Brand_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>